update post: Jackson 라이브러리

--- a/clz8g3v19000g09k361w2dxfw.md
+++ b/clz8g3v19000g09k361w2dxfw.md
@@ -39,7 +39,7 @@ public class ProductInfoResponse {
 
 ## 데이터 매핑 방법
 
-### @Getter
+### `@Getter`
 
 ```java
 @Getter
@@ -54,7 +54,7 @@ public class ProductInfoResponse {
 * Lombok 사용으로 코드의 가독성이 높음
     
 
-### @JsonProperty
+### `@JsonProperty`
 
 ```java
 public class ProductInfoResponse {
@@ -68,7 +68,7 @@ public class ProductInfoResponse {
 * 필드에 직접 접근하기 때문에 캡슐화가 깨짐
     
 
-### @JsonAutoDetect
+### `@JsonAutoDetect`
 
 ```java
 @JsonAutoDetect(fieldVisibility = JsonAutoDetect.Visibility.ANY)
