--- a/clz8g3v19000g09k361w2dxfw.md
+++ b/clz8g3v19000g09k361w2dxfw.md
@@ -85,7 +85,7 @@ public class ProductInfoResponse {
 * 제외 : `@JsonIgnore`
     
 
-이 외에도 여러가지 설정을 할 수 있는데, 어쨌든 `@JsonProperty`나 `@JsonAutoDetect`는 필드에 직접 접근하여 JSON 직렬화 및 역직렬화를 수행하는 방식이므로, 캡슐화를 유지하기 위해서 안전하게 @Getter를 사용하는 것이 좋다.
+이 외에도 여러가지 설정을 할 수 있는데, 어쨌든 `@JsonProperty`나 `@JsonAutoDetect`는 필드에 직접 접근하여 JSON 직렬화 및 역직렬화를 수행하는 방식이므로, 캡슐화를 유지하기 위해서 안전하게 `@Getter`를 사용하는 것이 좋다.
 
 **📘 참고자료**
 
